--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,17 +1,27 @@
 {
-  "name": "backend",
+  "name": "connect4-backend",
   "version": "1.0.0",
+  "description": "Real-time Connect 4 game server with modular architecture",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
+  "keywords": [
+    "connect4",
+    "game",
+    "websocket",
+    "multiplayer"
+  ],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^4.18.2",
+    "socket.io": "^4.6.1",
+    "mongoose": "^8.0.3",
+    "cors": "^2.8.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
