--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,10 +16,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "socket.io": "^4.6.1",
     "mongoose": "^8.0.3",
-    "cors": "^2.8.5"
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
